--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "font-awesome": "^4.7.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
